<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switchNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat"
            android:minHeight="48dp"
            android:text="@string/dark_mode"
            android:textColor="@color/teal_700"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/zodiacIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/zodiac_intro"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchNightMode" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/search"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/yearHint"
            app:layout_constraintStart_toStartOf="@+id/yearHint"
            app:layout_constraintTop_toBottomOf="@+id/yearHint"
            tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/zodiacIntro"
        app:layout_constraintStart_toStartOf="@+id/zodiacIntro"
        app:layout_constraintTop_toBottomOf="@+id/zodiacIntro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/date"
            android:inputType="number"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/monthHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dateHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/monthInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/month"
            android:inputType="number"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yearHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/monthHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yearInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/year"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

        <TextView
            android:id="@+id/zodiacResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/zodiac_results"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iconZodiac"
            app:layout_constraintStart_toStartOf="@+id/iconZodiac"
            app:layout_constraintTop_toBottomOf="@+id/iconZodiac" />

    <ImageView
        android:id="@+id/iconZodiac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="1"
        android:contentDescription="@string/zodiac_image"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>